implement followship
